# pastebin

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
public/css/: style.css
public/html/: index.html  index_user.html  login.html  register.html
src/: main.rs
src/logic/: app_state.rs  file_master.rs  hasher.rs  mod.rs  user_db.rs  user_sessions.rs  utilities.rs
src/routes/: index.rs  login.rs  logout.rs  mod.rs  paste.rs  register.rs
