[package]
name = "pastebin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-argon2 = "1.0.0"
actix-web = "3"
actix-files = "0.5.0"
lazy_static = "1.4.0"
dotenv = "0.15.0"
serde = "1"
uuid = { version="0.8.2", features=["v4"] }
env_logger = "0.9.0"
log = "0.4.14"